--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "compile",
+            "label": "compileWindows",
             "command": "gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
