--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -13,5 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install software
+      run: sudo apt-get install -y libopengl-dev libglfw3-dev
     - name: make
       run: make
