--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install software
-      run: sudo apt-get install -y libopengl-dev libglfw3-dev
+      run: sudo apt-get install -y libopengl-dev libglfw3-dev libglfw3
     - name: make
       run: make
