--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install software
       run: sudo apt-get install -y libopengl-dev
     - name: make
-      run: make
+      run: pwd && make
